# printr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PKGBUILD  README.md  Vagrantfile  build.rs  contributors.md  get-printr.bash  get-printr.sh
.github/workflows/: publish.yml  release.yml  standard-jobs.yml
ci/: build-ubuntu  cargo-out-dir  generate-manpage  string-substitution.py
docs/: printr.1.txt.tpl  printr.txt.tpl
src/: app.rs  cli.rs  cli.yaml  lib.rs  main.rs
tools/Vagrant/: bootstrap  setup-deps
tools/shell/: env-vars
