[package]
name = "printr"
version = "0.1.0"
authors = ["IgnisDa <ignisda2001@gmail.com>"]
edition = "2018"
description = "The smarter echo alternative"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
sentiment = "0.1.1"
ansi_term = "0.12.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "1.0.3"
predicates = "1"
