[package]
name = "printr"
version = "0.1.2"
authors = ["Diptesh Choudhuri <diptesh.choudhuri@gmail.com>"]
edition = "2018"
description = "The smarter echo alternative"
readme = "README.md"
documentation = "https://github.com/IgnisDa/printr"
homepage = "https://github.com/IgnisDa/printr"
repository = "https://github.com/IgnisDa/printr"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
sentiment = "0.1.1"
ansi_term = "0.12.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "1.0.3"
predicates = "1"

[dependencies.clap]
version = "2.33.0"
default-features = false
features = ["suggestions"]

[build-dependencies.clap]
version = "2.33.0"
default-features = false
features = ["suggestions"]
